--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
 
+#Configuracoes MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/logistica?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
